<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controladores.RegisterActivity"
        android:background="@color/colorBackGround">

    <Button
            android:text="FOTO"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/rounder_corner_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/galleryfoto" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edad" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/registrar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:onClick="foto"
            app:layout_constraintHorizontal_bias="0.607" app:layout_constraintVertical_bias="0.488"/>
    <ImageView
            android:layout_width="54dp"
            android:layout_height="48dp" tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/galleryfoto" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edad" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/registrar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.987" app:layout_constraintVertical_bias="0.488"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="200dp"
            android:ems="10"
            android:id="@+id/nombre"
            android:gravity="center"
            android:hint="@string/nombre"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText" app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintVertical_bias="0.196"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/nombre"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="4dp"
            android:id="@+id/correo"
            android:gravity="center"
            android:hint="@string/correo"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText" app:layout_constraintHorizontal_bias="0.502"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/correo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="12dp"
            android:id="@+id/contraseña"
            android:gravity="center"
            android:hint="@string/contraseña"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText" app:layout_constraintHorizontal_bias="0.502"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintTop_toBottomOf="@+id/contraseña"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            android:id="@+id/edad"
            android:gravity="center"
            android:hint="@string/edad"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorTextHint"
            android:textColorLink="@color/colorText"
            android:textColorHighlight="@color/colorText" app:layout_constraintHorizontal_bias="0.502"/>

    <Button
            android:text="@string/registrar"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="116dp"
            app:layout_constraintTop_toBottomOf="@+id/edad"
            android:id="@+id/registrar"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/rounder_corner_button"
            android:ems="10"
            android:onClick="Register" app:layout_constraintHorizontal_bias="0.502"/>

    <Button
            android:text="@string/volver"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/registrar"
            android:id="@+id/volver"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorPrimary"
            android:background="@drawable/rounder_corner_button"
            android:ems="10" android:onClick="volver" app:layout_constraintHorizontal_bias="0.502"/>

</android.support.constraint.ConstraintLayout>